--- a/automated-ebs-snapshots/Makefile
+++ b/automated-ebs-snapshots/Makefile
@@ -1,6 +1,7 @@
 install:
-	python setup.py build
-	python setup.py install
+	python3 setup.py build
+	python3 setup.py install
 release:
-	python setup.py register
+	python3 setup.py sdist
+	python3 setup.py register
 	python3 -m twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
